# labgrid-qemu-sample

./: .env.dist  .envrc.dist  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .yamlfmt  Dockerfile.ci  Makefile  README.md  compose.yaml  local.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  qemunetworkstrategy.py  requirements.txt  test_qemu_networking.py
.github/workflows/: run-tests.yml
artifacts/: Dockerfile.artifacts  artifacts.yaml  requirements.txt
artifacts/artifacts/: __main__.py
cli/: qemu_manager.py
config/: local.yaml  qemu-stateful.yaml  qemu.yaml
tests/: conftest.py  test_openvpn.py  test_shells.py  test_ssh_version.py  test_util.py
tests/driver/: test_parse_port_forwarding.py
tests/openvpn/: .gitignore  Dockerfile.openvpn  client.conf.tmpl  compose.yaml
tests/util/: test_docker.py  test_opkg.py
util/: crypto.py  docker.py  fs.py  func.py  network.py  openwrt.py  opkg.py  process.py  qmp.py  service.py  shell.py  ssh.py  uci.py  x509.py
util/driver/: __init__.py  base_qemudriver.py  custom_qemudriver.py  params.py  stateful_qemudriver.py
util/local_labgrid/: __init__.py  params.py  strategy.py
util/strategy/: __init__.py  qemu_network.py  qemu_stateful.py  qemu_strategy.py  qemunetworkstrategy.py  status.py
